monticore-generator/src/test/resources/cocos/invalid/A4016/A4016.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4016;

grammar A4016 {

  token A = B;

}
